# scheme-on-compute

./: .gitignore  Cargo.toml  README.md  fastly.toml
.cargo/: config.toml
examples/: advanced.scm  computational-patterns.scm  fibonacci.scm  list-processing.scm  turing-complete.scm
src/: lib.rs  main.rs
tests/: test_scheme.rs
