[package]
name = "lisp_compute"
version = "0.1.0"
edition = "2018"

[dependencies]
fastly = { version = "0.9.0", optional = true }

[features]
default = []
fastly-binary = ["fastly"]

[lib]
name = "lisp_compute"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["fastly-binary"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1 